spliwise-back completado para corregir

--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "gestor-gastos-backend",
+  "name": "splitwise-back",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
+  
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.0"
+    "mongoose": "^8.5.1"
   },
+  
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.4"
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lpz8/gestor-gastos.git"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
+  
   "bugs": {
     "url": "https://github.com/lpz8/gestor-gastos/issues"
   },
