--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
+CORS_ORIGIN=*
 MONGO_URI=mongodb+srv://lpz84:RealMadrid8@task.bxczcde.mongodb.net/gestor_gastos?retryWrites=true&w=majority&appName=Task
